added 2 more langauges

--- a/goodbye/goodbye.html
+++ b/goodbye/goodbye.html
@@ -4,4 +4,6 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> English2: Goodbye, friends! </li>
+  <li> Spanish2:  Adios, amigos! </li>
 </ul>
